# RAG-Shield

./: .gitignore  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml  requirements.txt  setup.py
blog/: blog1_rag_threat_landscape.md  blog2_poison_detection.md  blog3_merkle_integrity.md  blog4_differential_privacy.md  blog5_private_information_retrieval.md  blog6_attack_forensics.md  blog7_active_defense.md  blog8_evaluation_benchmarks.md  blog9_production_integration.md
docs/: whitepaper.md
examples/: attack_demo.py  basic_rag.py  benchmark_demo.py  detection_demo.py  forensics_demo.py  full_defense_demo.py  integration_demo.py  integrity_demo.py  pir_demo.py  privacy_demo.py
src/ragshield/: __init__.py
src/ragshield/benchmarks/: __init__.py  attack_eval.py  datasets.py  defense_eval.py  metrics.py  performance.py  runner.py
src/ragshield/core/: __init__.py  document.py  embedder.py  knowledge_base.py  rag_system.py  retriever.py
src/ragshield/defense/: __init__.py  monitor.py  quarantine.py  sanitizer.py  shield.py
src/ragshield/detection/: __init__.py  base.py  factory.py  perplexity.py  semantic.py  similarity.py
src/ragshield/forensics/: __init__.py  analyzer.py  attribution.py  provenance.py  timeline.py
src/ragshield/integrations/: __init__.py  base.py  config.py  langchain_adapter.py  llamaindex_adapter.py  logging.py
src/ragshield/pir/: base.py  (+4 more)
tests/: __init__.py  test_benchmarks.py  test_core.py  test_defense.py  test_detection.py  test_forensics.py  test_integrations.py  test_integrity.py  test_pir.py  test_privacy.py  test_redteam.py
(+12 files in other folders)
